Update version to stable/2024-04-01
Updated the API version from preview/2024-04-01-preview to stable/2024-04-01.

--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/copilotSettings.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/copilotSettings.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Microsoft.PortalServices",
-    "version": "2024-04-01-preview",
+    "version": "2024-04-01",
     "description": "Azure Portal Services API Reference",
     "x-typespec-generated": [
       {
@@ -324,3 +324,4 @@
   },
   "parameters": {}
 }
+
