--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_CreateOrUpdate.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_CreateOrUpdate.json
@@ -3,7 +3,7 @@
   "title": "Create a new Copilot settings or update an existing one",
   "parameters": {
     "name": "default",
-    "api-version": "2024-04-01-preview",
+    "api-version": "2024-04-01",
     "resource": {
       "properties": {
         "accessControlEnabled": true
@@ -33,3 +33,4 @@
     }
   }
 }
+
