--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_Delete.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_Delete.json
@@ -3,10 +3,11 @@
   "title": "Delete Copilot Settings",
   "parameters": {
     "name": "default",
-    "api-version": "2024-04-01-preview"
+    "api-version": "2024-04-01"
   },
   "responses": {
     "200": {},
     "204": {}
   }
 }
+
