--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_Update.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_Update.json
@@ -3,7 +3,7 @@
   "title": "Update Copilot Settings",
   "parameters": {
     "name": "default",
-    "api-version": "2024-04-01-preview",
+    "api-version": "2024-04-01",
     "properties": {
       "properties": {
         "accessControlEnabled": true
@@ -23,3 +23,4 @@
     }
   }
 }
+
