--- a/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_Get.json
+++ b/specification/portalservices/resource-manager/Microsoft.PortalServices/copilotSettings/stable/2024-04-01/examples/CopilotSettings_Get.json
@@ -3,7 +3,7 @@
   "title": "Get Copilot Settings",
   "parameters": {
     "name": "default",
-    "api-version": "2024-04-01-preview"
+    "api-version": "2024-04-01"
   },
   "responses": {
     "200": {
@@ -18,3 +18,4 @@
     }
   }
 }
+
