--- a/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
@@ -32,7 +32,7 @@ options:
     flavor: azure
     api-version: "2018-01-01"
   "@azure-tools/typespec-ts":
-    generateMetadata: false
+    generateMetadata: true
     generateTest: false
     azureSdkForJs: true
     experimentalExtensibleEnums: true
