--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -36,7 +36,10 @@ on:
         type: string
 
 permissions:
+  checks: read
   contents: read
+  issues: read
+  pull-requests: read
 
 jobs:
   arm-auto-signoff-preview:
