Revert "remove option related to metadata"
This reverts commit a38ed1b51a83da39b313c0d4ce0cb2b936d1952d.

--- a/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid.SystemEvents/tspconfig.yaml
@@ -34,6 +34,7 @@ options:
   "@azure-tools/typespec-ts":
     generateMetadata: true
     generateTest: false
+    azureSdkForJs: true
     experimentalExtensibleEnums: true
     package-dir: "eventgrid-systemevents"
     packageDetails:
