tsp with multi namespaces

--- a/specification/search/Azure.Search/tspconfig.yaml
+++ b/specification/search/Azure.Search/tspconfig.yaml
@@ -16,6 +16,7 @@ options:
     api-version: "2024-07-01"
     package-name: "{package-dir}"
     flavor: azure
+    enable-typespec-namespace: true
   "@azure-tools/typespec-csharp":
     package-dir: "Azure.Search.Documents"
     namespace: "{package-dir}"
