Moved on to model validations, fixed 20

--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/Applications_List.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/Applications_List.json
@@ -74,6 +74,6 @@
       }
     }
   },
-  "operationId": "Application_List",
-  "title": "Application_List"
+  "operationId": "Applications_List",
+  "title": "Applications_List"
 }
