--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/Applications_Update.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/Applications_Update.json
@@ -54,6 +54,6 @@
       }
     }
   },
-  "operationId": "Application_Update",
-  "title": "Application_Update"
+  "operationId": "Applications_Update",
+  "title": "Applications_Update"
 }
