--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackage_Update.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackage_Update.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "resourceGroup1",
     "api-version": "2024-08-08-preview",
     "appAttachPackageName": "msixpackagefullname",
-    "appAttachPackage": {
+    "appAttachPackagePatch": {
       "image": {
         "packageAlias": "msixpackagealias",
         "imagePath": "imagepath",
