--- a/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/AppAttachPackageInfo_Import.json
+++ b/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/AppAttachPackageInfo_Import.json
@@ -5,7 +5,7 @@
     "hostPoolName": "hostpool1",
     "api-version": "2024-08-08-preview",
     "importPackageInfoRequest": {
-      "path": "imagepath",
+      "path": "/subscriptions/daefabc0-95b4-48b3-b645-8a753a63c4fa/resourcegroups/resourceGroup1/imagePath",
       "packageArchitecture": "x64"
     }
   },
@@ -30,7 +30,7 @@
             "properties": {
               "image": {
                 "packageAlias": "msixpackagealias",
-                "imagePath": "imagepath",
+                "imagePath": "/subscriptions/daefabc0-95b4-48b3-b645-8a753a63c4fa/resourcegroups/resourceGroup1/imagePath",
                 "packageName": "MsixPackageName",
                 "packageFamilyName": "MsixPackage_FamilyName",
                 "packageFullName": "MsixPackage_FullName",
@@ -83,7 +83,7 @@
             "properties": {
               "image": {
                 "packageAlias": "msixpackagealias",
-                "imagePath": "imagepath",
+                "imagePath": "/subscriptions/daefabc0-95b4-48b3-b645-8a753a63c4fa/resourcegroups/resourceGroup1/imagePath",
                 "packageName": "MsixPackageName",
                 "packageFamilyName": "MsixPackage_FamilyName",
                 "packageFullName": "MsixPackage_FullName",
