--- a/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/AppAttachPackage_Update.json
+++ b/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/AppAttachPackage_Update.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "resourceGroup1",
     "api-version": "2024-08-08-preview",
     "appAttachPackageName": "msixpackagefullname",
-    "appAttachPackage": {
+    "appAttachPackagePatch": {
       "image": {
         "packageAlias": "msixpackagealias",
         "imagePath": "imagepath",
