--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/NetworkManagerConnectivityConfigurationPut.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/NetworkManagerConnectivityConfigurationPut.json
@@ -69,13 +69,11 @@
               "isGlobal": "False"
             }
           ],
-          "connectivityCapabilities": [
-            {
-              "connectedGroupPrivateEndpointScale": "Standard",
-              "connectedGroupAddressOverlap": "Allowed",
-              "peeringEnforcement": "Unenforced"
-            }
-          ],
+          "connectivityCapabilities": {
+            "connectedGroupPrivateEndpointScale": "Standard",
+            "connectedGroupAddressOverlap": "Allowed",
+            "peeringEnforcement": "Unenforced"
+          },
           "provisioningState": "Succeeded",
           "resourceGuid": "00000000-0000-0000-0000-000000000000"
         }
@@ -113,13 +111,11 @@
               "isGlobal": "False"
             }
           ],
-          "connectivityCapabilities": [
-            {
-              "connectedGroupPrivateEndpointScale": "Standard",
-              "connectedGroupAddressOverlap": "Allowed",
-              "peeringEnforcement": "Unenforced"
-            }
-          ],
+          "connectivityCapabilities": {
+            "connectedGroupPrivateEndpointScale": "Standard",
+            "connectedGroupAddressOverlap": "Allowed",
+            "peeringEnforcement": "Unenforced"
+          },
           "provisioningState": "Succeeded",
           "resourceGuid": "00000000-0000-0000-0000-000000000000"
         }
