--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/NetworkManagerEffectiveConnectivityConfigurationsList.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/NetworkManagerEffectiveConnectivityConfigurationsList.json
@@ -34,6 +34,11 @@
                   "isGlobal": "False"
                 }
               ],
+              "connectivityCapabilities": {
+                "connectedGroupPrivateEndpointScale": "Standard",
+                "connectedGroupAddressOverlap": "Allowed",
+                "peeringEnforcement": "Unenforced"
+              },
               "provisioningState": "Succeeded"
             },
             "configurationGroups": [
