--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "prettier": "~3.3.3",
     "typescript": "~5.6.2"
   },
+  "overrides": {
+    "@npmcli/arborist": "^8.0.0"
+  },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
