--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackage_Update.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackage_Update.json
@@ -39,8 +39,9 @@
         "certificateExpiry": "2023-01-02T17:18:19.1234567Z"
       },
       "hostPoolReferences": [
-        "hostpool1",
-        "hostpool2"
+        "/subscriptions/d15725f7-6577-4a8c-95f1-3da903b42364/resourcegroups/charlesk-southcentralus/providers/Microsoft.DesktopVirtualization/hostPool/hp1",
+        "/subscriptions/d15725f7-6577-4a8c-95f1-3da903b42364/resourcegroups/charlesk-southcentralus/providers/Microsoft.DesktopVirtualization/hostPool/hp2"
+
       ],
       "keyVaultURL": "url",
       "failHealthCheckOnStagingFailure": false
