last model validation bunch

--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackage_Update.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackage_Update.json
@@ -44,7 +44,7 @@
           "/subscriptions/d15725f7-6577-4a8c-95f1-3da903b42364/resourcegroups/charlesk-southcentralus/providers/Microsoft.DesktopVirtualization/hostPool/hp2"
         ],
         "keyVaultURL": "url",
-        "failHealthCheckOnStagingFailure": false
+        "failHealthCheckOnStagingFailure": "DoNotFail"
       }
     }
   },
