--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateWebApp.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateWebApp.json
@@ -107,6 +107,7 @@
           },
           "scmSiteAlsoStopped": false,
           "clientAffinityEnabled": true,
+          "clientAffinityProxyEnabled": true,
           "clientCertEnabled": false,
           "clientCertMode": "Required",
           "hostNamesDisabled": false,
