--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateWebAppSlot.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateWebAppSlot.json
@@ -221,6 +221,7 @@
           },
           "scmSiteAlsoStopped": false,
           "clientAffinityEnabled": true,
+          "clientAffinityProxyEnabled": true,
           "clientCertEnabled": false,
           "clientCertMode": "Required",
           "hostNamesDisabled": false,
