Add xff support (#32484)
Co-authored-by: Yaara Rumney <yaararm@gmail.com>

--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/webapplicationfirewall.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/webapplicationfirewall.json
@@ -757,7 +757,9 @@
           "enum": [
             "ClientAddr",
             "GeoLocation",
-            "None"
+            "None",
+            "ClientAddrXFFHeader",
+            "GeoLocationXFFHeader"
           ],
           "x-ms-enum": {
             "name": "ApplicationGatewayFirewallUserSessionVariable",
