Render report title when count is greater than 0

--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -29,7 +29,7 @@ extends:
   parameters:
     stages:
     - stage: Build
-      displayName: 'SDK Automation'
+      displayName: 'SDK Generation'
       jobs:
       - job:
 
