align the name of bin file name in package.json

--- a/eng/tools/spec-gen-sdk-runner/package.json
+++ b/eng/tools/spec-gen-sdk-runner/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "version": "0.0.1",
   "bin": {
-    "gen-sdk": "cmd/gen-sdk.js"
+    "spec-gen-sdk-runner": "cmd/spec-gen-sdk-runner.js"
   },
   "scripts": {
     "build": "tsc --build",
