Add contact info for upgrade failures

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,7 @@ updates:
         patterns:
           - "@autorest/openapi-to-typespec"
       # Ships separately from other typespec packages
+      # If failures during upgrade, contact @aggarwalsw and @nikhgup
       typespec-liftr-base:
         patterns:
           - "@azure-tools/typespec-liftr-base"
