--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -17,7 +17,7 @@ jobs:
           # Required to detect changed files in PR
           fetch-depth: 2
 
-      # Output is "none" for no-op, "add" to add label, and "remove" to remove label
+      # Output is "true" if PR contains only incremental changes to an existing TypeSpec RP
       - id: incremental-typespec
         name: ARM Incremental Typespec (Preview)
         uses: actions/github-script@v7
