--- a/specification/hybridconnectivity/HybridConnectivity.Management/tspconfig.yaml
+++ b/specification/hybridconnectivity/HybridConnectivity.Management/tspconfig.yaml
@@ -39,6 +39,8 @@ options:
     experimentalExtensibleEnums: true
     enableOperationGroup: true
     examples-directory: "{project-root}/examples"
+    typespecTitleMap:
+        HybridConnectivityManagementAPIClient: HybridConnectivityManagementAPIClien
     generateSample: true
     package-dir: "arm-hybridconnectivity"
     flavor: "azure"
