--- a/.github/actions/add-empty-artifact/action.yaml
+++ b/.github/actions/add-empty-artifact/action.yaml
@@ -1,5 +1,5 @@
 name: Add Empty Artifact
-description: Uploads an empty artifact named `${name}=${value}`, that's consumed by another workflow
+description: Uploads an empty artifact named `${name}=${value}`, to be consumed by a later workflow
 
 inputs:
   name:
