Fix suppression approval label

--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -51,7 +51,7 @@ jobs:
        (github.event.label.name == 'ARMReview' ||
         github.event.label.name == 'NotReadyForARMReview' ||
         github.event.label.name == 'SuppressionReviewRequired' ||
-        github.event.label.name == 'Suppression-Approved' ||
+        github.event.label.name == 'Approved-Suppression' ||
         github.event.label.name == 'ARMAutoSignOffPreview')) ||
       (github.event_name == 'issue_comment' &&
        github.event.issue.pull_request &&
