--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -9,6 +9,9 @@ on:
       # Depends on labels, so must re-evaluate whenever a relevant label is manually added or removed.
       - labeled
       - unlabeled
+  workflow_run:
+    workflows: ["ARM Incremental Typespec (Preview)"]
+    types: [completed]
   # For manual testing
   workflow_dispatch:
     inputs:
