Add new API version 2025-01-01-preview to Log Search Alerts (Scheduled Query Rules)

--- a/specification/monitor/resource-manager/sdk-suppressions.yaml
+++ b/specification/monitor/resource-manager/sdk-suppressions.yaml
@@ -54,3 +54,4 @@ suppressions:
       breaking-changes:
         - Model ScheduledQueryRuleResource no longer has parameter rule_resolve_configuration
         - Model ScheduledQueryRuleResourcePatch no longer has parameter rule_resolve_configuration
+        - Model ScheduledQueryRuleResource no longer has kind EventLogAlert
