--- a/specificationRepositoryConfiguration.json
+++ b/specificationRepositoryConfiguration.json
@@ -18,8 +18,7 @@
     },
     "azure-sdk-for-net": {
       "integrationRepository": "azure-sdk/azure-sdk-for-net",
-      "mainRepository": "pshao25/azure-sdk-for-net",
-      "mainBranch": "computeMigrationReadmeUpdate",
+      "mainRepository": "Azure/azure-sdk-for-net",
       "configFilePath": "eng/swagger_to_sdk_config.json"
     },
     "azure-sdk-for-python": {
