spec change for testing

--- a/specification/ai/data-plane/OpenAI.Assistants/OpenApiV3/2024-02-15-preview/assistants_generated.yaml
+++ b/specification/ai/data-plane/OpenAI.Assistants/OpenApiV3/2024-02-15-preview/assistants_generated.yaml
@@ -2412,6 +2412,7 @@ components:
         - 2024-07-01-preview
         - 2024-09-01-preview
         - 2024-10-01-preview
+        - 2025-03-01-preview
       description: The known set of supported API versions.
     SubmitToolOutputsAction:
       type: object
