--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -70,12 +70,15 @@ jobs:
           sparse-checkout: |
             .github
 
-      # Output is "none" for no-op, "add" to add label, and "remove" to remove label
+      # Output:
+      # {
+      #   labelAction: LabelAction, ("none" for no-op, "add" to add label, and "remove" to remove label)
+      #   issueNumber: number
+      # }
       - id: get-label-action
         name: ARM Auto Signoff (Preview)
         uses: actions/github-script@v7
         with:
-          result-encoding: string
           script: |
             const { default: getLabelAction } =
               await import('${{ github.workspace }}/.github/workflows/src/arm-auto-signoff-preview.js');
@@ -86,7 +89,7 @@ jobs:
           ISSUE_NUMBER: ${{ inputs.issue_number }}
           HEAD_SHA: ${{ inputs.head_sha }}
 
-      - if: ${{ steps.get-label-action.outputs.result == 'add' || steps.get-label-action.outputs.result == 'remove' }}
+      - if: ${{ steps.get-label-action.outputs.labelAction == 'add' || steps.get-label-action.outputs.labelAction == 'remove' }}
         name: Upload artifact with results
         uses: ./.github/actions/add-label-artifact
         with:
