--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -89,13 +89,13 @@ jobs:
           ISSUE_NUMBER: ${{ inputs.issue_number }}
           HEAD_SHA: ${{ inputs.head_sha }}
 
-      - if: ${{ steps.get-label-action.outputs.labelAction == 'add' || steps.get-label-action.outputs.labelAction == 'remove' }}
+      - if: ${{ steps.get-label-action.outputs.result.labelAction == 'add' || steps.get-label-action.outputs.labelAction == 'remove' }}
         name: Upload artifact with results
         uses: ./.github/actions/add-label-artifact
         with:
           name: "ARMAutoSignoffPreview"
           # Convert "add/remove" to "true/false"
-          value: "${{ steps.get-label-action.outputs.labelAction == 'add' }}"
+          value: "${{ steps.get-label-action.outputs.result.labelAction == 'add' }}"
 
       # Required for consumers to identify the PR associated with this workflow run
       # Output can be trusted, because it was uploaded from a workflow that is trusted,
@@ -106,4 +106,4 @@ jobs:
         uses: ./.github/actions/add-empty-artifact
         with:
           name: "issue-number"
-          value: ${{ steps.get-label-action.outputs.issueNumber }}
+          value: ${{ steps.get-label-action.outputs.result.issueNumber }}
