add test change

--- a/specification/appconfiguration/data-plane/Microsoft.AppConfiguration/stable/2023-11-01/appconfiguration.json
+++ b/specification/appconfiguration/data-plane/Microsoft.AppConfiguration/stable/2023-11-01/appconfiguration.json
@@ -162,7 +162,7 @@
           {
             "name": "Sync-Token",
             "in": "header",
-            "description": "Used to guarantee real-time consistency between requests.",
+            "description": "Test Used to guarantee real-time consistency between requests.",
             "required": false,
             "type": "string",
             "x-ms-client-name": "syncToken"
@@ -515,7 +515,7 @@
           {
             "name": "snapshot",
             "in": "query",
-            "description": "A filter used get key-values for a snapshot. The value should be the name of\nthe snapshot. Not valid when used with 'key' and 'label' filters.",
+            "description": "Test A filter used get key-values for a snapshot. The value should be the name of\nthe snapshot. Not valid when used with 'key' and 'label' filters.",
             "required": false,
             "type": "string"
           },
