--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateAppServicePlan.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateAppServicePlan.json
@@ -66,7 +66,8 @@
           "reserved": false,
           "targetWorkerCount": 0,
           "targetWorkerSizeId": 0,
-          "provisioningState": "Succeeded"
+          "provisioningState": "InProgress",
+          "asyncScalingEnabled": true
         },
         "sku": {
           "name": "P1",
