enum instead of boolean ... and examples

--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateAppServicePlan.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateAppServicePlan.json
@@ -35,7 +35,7 @@
           "targetWorkerCount": 0,
           "targetWorkerSizeId": 0,
           "provisioningState": "Succeeded",
-          "asyncScalingEnabled": false
+          "asyncScalingEnabled": "false"
         },
         "sku": {
           "name": "P1",
@@ -66,8 +66,8 @@
           "reserved": false,
           "targetWorkerCount": 0,
           "targetWorkerSizeId": 0,
-          "provisioningState": "InProgress",
-          "asyncScalingEnabled": true
+          "provisioningState": "Succeeded",
+          "asyncScalingEnabled": "true"
         },
         "sku": {
           "name": "P1",
