match isSpot (non-enum)

--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateAppServicePlan.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/CreateOrUpdateAppServicePlan.json
@@ -35,7 +35,7 @@
           "targetWorkerCount": 0,
           "targetWorkerSizeId": 0,
           "provisioningState": "Succeeded",
-          "asyncScalingEnabled": "false"
+          "asyncScalingEnabled": false
         },
         "sku": {
           "name": "P1",
@@ -67,7 +67,7 @@
           "targetWorkerCount": 0,
           "targetWorkerSizeId": 0,
           "provisioningState": "Succeeded",
-          "asyncScalingEnabled": "true"
+          "asyncScalingEnabled": true
         },
         "sku": {
           "name": "P1",
