Addressing PR comments and adding enum description

--- a/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/stable/2025-02-01/examples/PATCHVault_WithSourceScanConfiguration.json
+++ b/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/stable/2025-02-01/examples/PATCHVault_WithSourceScanConfiguration.json
@@ -19,7 +19,7 @@
           "sourceScanConfiguration": {
             "state": "Enabled",
             "sourceScanIdentity": {
-              "identityType": "UserAssigned",
+              "operationIdentityType": "UserAssigned",
               "userAssignedIdentity": "/subscriptions/85bf5e8c-3084-4f42-add2-746ebb7e97b2/resourcegroups/defaultrg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/examplemsi"
             }
           }
@@ -52,7 +52,7 @@
             "sourceScanConfiguration": {
               "state": "Enabled",
               "sourceScanIdentity": {
-                "identityType": "UserAssigned",
+                "operationIdentityType": "UserAssigned",
                 "userAssignedIdentity": "/subscriptions/85bf5e8c-3084-4f42-add2-746ebb7e97b2/resourcegroups/defaultrg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/examplemsi"
               }
             }
