--- a/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/stable/2025-02-01/examples/PUTVault_WithSourceScanConfiguration.json
+++ b/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/stable/2025-02-01/examples/PUTVault_WithSourceScanConfiguration.json
@@ -11,7 +11,7 @@
           "sourceScanConfiguration": {
             "state": "Enabled",
             "sourceScanIdentity": {
-              "identityType": "SystemAssigned"
+              "operationIdentityType": "SystemAssigned"
             }
           }
         }
@@ -46,7 +46,7 @@
             "sourceScanConfiguration": {
               "state": "Enabled",
               "sourceScanIdentity": {
-                "identityType": "SystemAssigned"
+                "operationIdentityType": "SystemAssigned"
               }
             }
           }
