--- a/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/stable/2025-02-01/examples/PUTVault_WithSourceScanConfiguration.json
+++ b/specification/recoveryservices/resource-manager/Microsoft.RecoveryServices/stable/2025-02-01/examples/PUTVault_WithSourceScanConfiguration.json
@@ -78,7 +78,7 @@
             "sourceScanConfiguration": {
               "state": "Enabled",
               "sourceScanIdentity": {
-                "identityType": "SystemAssigned"
+                "operationIdentityType": "SystemAssigned"
               }
             }
           }
