update keyvalut tspconfig

--- a/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
@@ -52,8 +52,8 @@ options:
       description: "Azure Key Vault Certificates"
     flavor: azure
   "@azure-tools/typespec-go":
-    service-dir: "sdk/security/keyvault"
-    package-dir: "azcertificates"
+    # service-dir: "sdk/security/keyvault"
+    # package-dir: "azcertificates"
     module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azcertificates"
     module-version: "0.0.1"
     emitter-output-dir: "{project-root}"
