--- a/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
@@ -54,8 +54,8 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/security/keyvault"
     package-dir: "azkeys"
-    module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azkeys"
-    module-version: "0.0.1"
+    # module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azkeys"
+    # module-version: "0.0.1"
     emitter-output-dir: "{project-root}"
     override-client-name: "Client"
     single-client: true
