--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/webapplicationfirewall.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/webapplicationfirewall.json
@@ -807,6 +807,14 @@
           "items": {
             "$ref": "#/definitions/ManagedRuleGroupOverride"
           }
+        },
+        "computedDisabledRuleGroups": {
+          "readOnly": true,
+          "description": "Stores the final list of disabled rule groups",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ManagedRuleSetRuleGroup"
+          }
         }
       }
     },
@@ -860,6 +868,26 @@
         "sensitivity": {
           "description": "Describes the override sensitivity to be applied when rule matches.",
           "$ref": "#/definitions/SensitivityType"
+        }
+      }
+    },
+    "ManagedRuleSetRuleGroup": {
+      "description": "Defines a managed rule set rule group",
+      "type": "object",
+      "required": [
+        "ruleGroupName"
+      ],
+      "properties": {
+        "ruleGroupName": {
+          "description": "Name of the rule group",
+          "type": "string"
+        },
+        "rules": {
+          "description": "List of rules within the rule group",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
@@ -976,76 +1004,6 @@
         }
       }
     },
-    "ExceptionEntry": {
-      "required": [
-        "matchVariable",
-        "valueMatchOperator"
-      ],
-      "description": "Adds exception to allow a request when the condition is satisfied.",
-      "type": "object",
-      "properties": {
-        "matchVariable": {
-          "type": "string",
-          "enum": [
-            "RequestURI",
-            "RemoteAddr",
-            "RequestHeader"
-          ],
-          "description": "The variable on which we evaluate the exception condition",
-          "x-ms-enum": {
-            "name": "ExceptionEntryMatchVariable",
-            "modelAsString": true
-          }
-        },
-        "values": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "description": "Allowed values for the matchVariable"
-        },
-        "valueMatchOperator": {
-          "type": "string",
-          "enum": [
-            "Equals",
-            "Contains",
-            "StartsWith",
-            "EndsWith",
-            "IPMatch"
-          ],
-          "x-ms-enum": {
-            "name": "ExceptionEntryValueMatchOperator",
-            "modelAsString": true
-          },
-          "description": "Operates on the allowed values for the matchVariable"
-        },
-        "selectorMatchOperator": {
-          "type": "string",
-          "enum": [
-            "Equals",
-            "Contains",
-            "StartsWith",
-            "EndsWith"
-          ],
-          "description": "When the matchVariable points to a key-value pair (e.g, RequestHeader), this operates on the selector",
-          "x-ms-enum": {
-            "name": "ExceptionEntrySelectorMatchOperator",
-            "modelAsString": true
-          }
-        },
-        "selector": {
-          "type": "string",
-          "description": "When the matchVariable points to a key-value pair (e.g, RequestHeader), this identifies the key."
-        },
-        "exceptionManagedRuleSets": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/ExclusionManagedRuleSet"
-          },
-          "description": "The managed rule sets that are associated with the exception."
-        }
-      }
-    },
     "ActionType": {
       "description": "Defines the action to take on rule match.",
       "type": "string",
@@ -1058,20 +1016,6 @@
       ],
       "x-ms-enum": {
         "name": "ActionType",
-        "modelAsString": true
-      }
-    },
-    "SensitivityType": {
-      "description": "Defines the sensitivity for the rule.",
-      "type": "string",
-      "enum": [
-        "None",
-        "Low",
-        "Medium",
-        "High"
-      ],
-      "x-ms-enum": {
-        "name": "SensitivityType",
         "modelAsString": true
       }
     },
@@ -1125,27 +1069,6 @@
           "x-ms-enum": {
             "name": " scrubbingRuleEntryState",
             "modelAsString": true
-          }
-        }
-      }
-    },
-    "ApplicationGatewayForContainersReferenceDefinition": {
-      "type": "object",
-      "description": "Defines an application gateway for containers reference.",
-      "required": [
-        "id"
-      ],
-      "properties": {
-        "id": {
-          "description": "Resource Id of the application gateway for containers.",
-          "type": "string",
-          "format": "arm-id",
-          "x-ms-arm-id-details": {
-            "allowedResources": [
-              {
-                "type": "Microsoft.ServiceNetworking/trafficControllers"
-              }
-            ]
           }
         }
       }
