--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/ApplicationGatewayAvailableWafRuleSetsGet.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/examples/ApplicationGatewayAvailableWafRuleSetsGet.json
@@ -21,6 +21,12 @@
                   "description": "",
                   "rules": [
                     {
+                      "ruleId": 200003,
+                      "ruleIdString": "200003",
+                      "description": "Multipart Request Body Strict Validation.",
+                      "state": "Disabled"
+                    },
+                    {
                       "ruleId": 200004,
                       "ruleIdString": "200004",
                       "description": "Possible Multipart Unmatched Boundary."
