--- a/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/webapplicationfirewall.json
+++ b/specification/network/resource-manager/Microsoft.Network/stable/2024-07-01/webapplicationfirewall.json
@@ -808,7 +808,7 @@
             "$ref": "#/definitions/ManagedRuleGroupOverride"
           }
         },
-        "computedDisabledRuleGroups": {
+        "computedDisabledRules": {
           "readOnly": true,
           "description": "Stores the final list of disabled rule groups",
           "type": "array",
