--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
@@ -6536,11 +6536,8 @@
       "description": "Represents a file search tool call within a streaming run step's tool call details.",
       "properties": {
         "file_search": {
-          "type": "object",
+          "$ref": "#/definitions/Agents.RunStepFileSearchToolCallResults",
           "description": "Reserved for future use.",
-          "additionalProperties": {
-            "type": "string"
-          },
           "x-ms-client-name": "fileSearch"
         }
       },
