--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -3,8 +3,10 @@ name: ARM Incremental TypeSpec (Preview)
 on:
   pull_request:
     paths:
-      # Only trigger if PR includes at least one non-example RM swagger
-      # All consumers of workflow must treat "skipped" as equal to "artifact=false"
+      # Always trigger on changes to WF itself
+      - .github
+      # Only trigger if PR includes at least one non-example RM swagger, since this is only way WF can return "true"
+      # All consumers of workflow must treat "skipped" as equal to "false"
       - "**/resource-manager/**/*.json"
       - "!**/examples/**/*.json"
 
