--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -6,7 +6,7 @@ on:
       # Always trigger on changes to WF itself
       - .github
       # Only trigger if PR includes at least one non-example RM swagger, since this is only way WF can return "true"
-      # All consumers of workflow must treat "skipped" as equal to "false"
+      # All consumers of workflow must treat "skipped" as equal to "completed false"
       - "**/resource-manager/**/*.json"
       - "!**/examples/**/*.json"
 
