--- a/specification/advisor/resource-manager/Microsoft.Advisor/preview/2023-09-01-preview/examples/ListConfigurations.json
+++ b/specification/advisor/resource-manager/Microsoft.Advisor/preview/2023-09-01-preview/examples/ListConfigurations.json
@@ -2,7 +2,7 @@
   "parameters": {
     "subscriptionId": "subscriptionId",
     "resourceGroup": "resourceGroup",
-    "api-version": "2023-01-01"
+    "api-version": "2023-09-01-preview"
   },
   "responses": {
     "200": {
