Add eng/scripts to sparse checkout

--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           sparse-checkout: |
             .github
+            eng/scripts
 
       # Output is "true" if PR contains only incremental changes to an existing TypeSpec RP
       - id: incremental-typespec
