--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -24,6 +24,8 @@ jobs:
         with:
           # Required to detect changed files in PR
           fetch-depth: 2
+          # Check only needs to view contents of changed files as a string, so can use
+          # "git show" on specific files instead of cloning whole repo
           sparse-checkout: |
             .github
 
