fix generation issues for JS in Feb release cycle

--- a/specification/databasewatcher/DatabaseWatcher.Management/tspconfig.yaml
+++ b/specification/databasewatcher/DatabaseWatcher.Management/tspconfig.yaml
@@ -37,6 +37,7 @@ options:
     generateMetadata: true
     hierarchyClient: false
     isModularLibrary: true
+    generateSample: true
     package-dir: "arm-databasewatcher"
     packageDetails:
       name: "@azure/arm-databasewatcher"
